@@ -52,6 +52,7 @@ John W. Eaton
 Jorge Barros de Abreu       
 Jose Luis Gutierrez         <jlg@gmx.at>
 Josep Mones i Teixidor      <jmones@puntbarra.com>
+Joseph Wakeling             <joseph.wakeling@webdrake.net>
 Julius O. Smith III         
 Justus H. Piater            <Justus.Piater@ULg.ac.be>
 Kai Habel                   <kai.habel@gmx.de>
@@ -78,6 +79,7 @@ Paul Kienzle                <pkienzle@users.sf.net>
 Paulo Neis                  <p_neis@yahoo.com.br>
 Pedro Felzenszwalb          
 Per Persson                 <persquare@users.sf.net>
+Peter L. Soendergaard       
 Peter V. Lanspeary          
 Phil Karn, KA9Q             
 Quentin Spencer             <qspencer@ieee.org>
@@ -89,7 +91,6 @@ Rick Niles                  <niles@axp745.gsfc.nasa.gov>
 Rick Richardson             
 Roberto A. F. Almeida       <roberto@calvin.ocfis.furg.br>
 Rolf Fabian                 <fabian@tu-cottbus.de>
-Sam Sirlin                  
 Shai Ayal                   
 Stefan van der Walt         <stefan@sun.ac.za>
 Sylvain Pelissier           <sylvain.pelissier@gmail.com>
